watchdog_kek/nohup.out
warning: purged 1 bytes
warning: total: purged 1 bytes
warning: purged 1000 bytes
warning: purged 24 bytes
warning: purged 1 bytes
warning: total: purged 1025 bytes
warning: purged 1 bytes
warning: total: purged 1 bytes
warning: purged 4 bytes
warning: total: purged 4 bytes
warning: purged 4 bytes
warning: purged 1000 bytes
warning: purged 24 bytes
warning: purged 1000 bytes
warning: purged 24 bytes
warning: total: purged 1024 bytes
warning: purged 9 bytes
warning: total: purged 9 bytes
warning: purged 1000 bytes
warning: purged 13 bytes
warning: total: purged 13 bytes
warning: purged 9 bytes
warning: total: purged 9 bytes
warning: purged 514 bytes
warning: total: purged 514 bytes
warning: purged 510 bytes
warning: total: purged 510 bytes
warning: purged 1000 bytes
warning: purged 24 bytes
warning: total: purged 1024 bytes
warning: purged 1000 bytes
warning: purged 1 bytes
warning: total: purged 1 bytes
warning: purged 1 bytes
warning: purged 1 bytes
warning: total: purged 2 bytes
warning: purged 510 bytes
warning: total: purged 510 bytes
warning: purged 514 bytes
warning: total: purged 514 bytes
warning: purged 4 bytes
warning: purged 514 bytes
warning: purged 1 bytes
warning: total: purged 515 bytes
warning: purged 1 bytes
warning: purged 1 bytes
warning: total: purged 2 bytes
warning: purged 4 bytes
warning: purged 510 bytes
warning: total: purged 514 bytes
warning: purged 4 bytes
warning: purged 1 bytes
warning: purged 4 bytes
warning: purged 1 bytes
warning: purged 510 bytes
warning: total: purged 515 bytes
warning: purged 1 bytes
warning: purged 514 bytes
warning: purged 1 bytes
warning: purged 4 bytes
  File "/home/hipex/ITS3/eudaq-related/watchdog_kek/test_watchdog.py", line 44
    parser.add_argument("--interval", "-i", default=1/, type=float, help="Monitoring interval in min (default 20).")
                                                      ^
SyntaxError: invalid syntax
